version: 4.8 - add json-path - add health check script and endpoint to enable readiness-check - use case null: feature-preview of java17 - add charset to content-type in order to fix rest-assured tests